re-architected application to use require js for pane.

--- a/src/html/panel.html
+++ b/src/html/panel.html
@@ -3,9 +3,6 @@
   <head>
     <meta encoding="utf-8"/>
     <link href="../css/styles.css" type="text/css" rel="stylesheet"/>
-    <script src="../js/libs/lavaca.js"></script>
-    <script src="../js/namespace.js"></script>
-    <script src="../js/panel.js"></script>
   </head>
   <body>
     <div id="view-root"></div>
@@ -20,5 +17,9 @@
         <pre>{selectedModel|s}</pre>
       </div>
     </script>
+    <script src="../js/libs/require.js"></script>
+    <script src="../js/requireConfig.js"></script>
+    <script src="../js/requireContent.js"></script>
+    <script src="../js/panel/boot.js"></script>
   </body>
 </html>
