--- a/src/html/panel.html
+++ b/src/html/panel.html
@@ -16,7 +16,7 @@
       </ul>
     </script>
     <script type="text/dust-template" data-name="options">
-      <div class="options">
+      <form class="options">
         <h4>App Namespace</h4>
         <p>Set if debugging an optimized build. Value should match the exports option of amd-dist grunt config.</p>
         <div class="input-group">
@@ -25,7 +25,7 @@
             <button class="btn btn-default submit" type="button">Submit</button>
           </span>
         </div>
-      </div>
+      </form>
     </script>
     <script type="text/dust-template" data-name="home">
     {?active}
@@ -40,7 +40,7 @@
         <pre>{selectedModel.json|s}</pre>
       </div>
     {:else}
-      <p>No Lavaca application detected</p>
+      <p class="no-lavaca">No Lavaca application detected. If in production set your namespace under the Options tab.</p>
     {/active}
     </script>
     <script data-main="../js/panel/boot.js" src="../components/requirejs/require.js"></script>
